# peerdrop-backend

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
docs/: 1_echo.md  2_chat.md  dev.md
docs/protocol/: 001.md  002.md
docs/tutorial/: 2_chat.md  3_sqlx.md
docs/usage/: 01.md
migrations/: 20250305201823_create_sessions_table.sql  20250319193130_create_users_table.sql
src/: config.rs  main.rs
src/actors/: chat_server.rs  mod.rs  my_actor.rs  ws_chat_session.rs
src/actors/chat_manager/: actor.rs  actors.rs  message.rs  mod.rs
src/actors/chat_session/: actor.rs
src/actors/session/: actor.rs
src/actors/session_manager/: actor.rs  messages.rs
src/actors/shared/: messages.rs  types.rs
src/db/: session.rs  user.rs
src/messages/: chat_server.rs  mod.rs  my_actor.rs
src/models/: session.rs  user.rs
src/routes/: mod.rs  session.rs  user.rs  ws.rs
src/utils/: eddsa.rs  generate_code.rs  mod.rs
tests/: README.md  package-lock.json  package.json  tsconfig.json
tests/src/: index.ts
