[package]
name = "peerdrop-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.40"
dotenv = "0.15.0"

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"

# https://github.com/launchbadge/sqlx/blob/main/examples/postgres/transaction/src/main.rs
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres" , "derive"] }
